[package]
name = "alpenglow-mini"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
hex = "0.4"
bls-signatures = "0.15.0"
reed-solomon-erasure = "6.0.0"
rand = "0.9.1"
